--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Prueba">
     <title>Prueba</title>
 	<!-- Styles -->
-	<link rel="stylesheet" href="../web/css/app.css">   
+	<link rel="stylesheet" href="web/css/app.css">   
 </head>
 <body class="">
 	<header>
@@ -21,7 +21,7 @@
 			        <span class="icon-bar"></span>
 			      </button>
 			      <a class="navbar-brand" href="#">
-			      	<img src="../web/images/logo.png" alt="Brand">
+			      	<img src="web/images/logo.png" alt="Brand">
 			      </a>
 			    </div>
 			    <!-- Collect the nav links, forms, and other content for toggling -->
@@ -63,26 +63,26 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-12 col-md-4 col-lg-4">
-						<img src="../web/images/wave.png" width="81" height="7" alt="">
+						<img src="web/images/wave.png" width="81" height="7" alt="">
 						<h2>About us</h2>
 						<p>Aliquam sed posuere urna, et gravida nisl. Praesent interdum nisl libero, pretium egestas purus eleifend vitae. Mauris suscipit vel lectus at luctus.</p>
 						<a href="#" class="btn btn-primary">Read More</a>
 					</div>
 					<div class="col-xs-12 col-md-8 col-lg-8">
-						<img src="../web/images/img-about-02.jpg" class="large" alt="">
-						<img src="../web/images/img-about-01.jpg" class="small" alt="">
+						<img src="web/images/img-about-02.jpg" class="large" alt="">
+						<img src="web/images/img-about-01.jpg" class="small" alt="">
 					</div>
 				</div>
 			</div>
 		</section>
 		<section class="journal">
-			<img class="center-block" src="../web/images/wave.png" width="81" height="7" alt="">
+			<img class="center-block" src="web/images/wave.png" width="81" height="7" alt="">
 			<h2 class="text-center">Our Journal</h2>
 			<div class="container">
 				<div class="row">
 					<div class="panel">
 						<div class="col-xs-12 col-sm-6 col-lg-4 item-journal">
-							<img src="../web/images/img-heart.jpg" width="100%" height="auto" alt="">
+							<img src="web/images/img-heart.jpg" width="100%" height="auto" alt="">
 							<i class="icon icon-heart"></i>
 						</div>
 						<div class="col-xs-12 col-sm-6 col-lg-4 item-journal">
@@ -92,7 +92,7 @@
 							<span class="badge italic">02</span>
 						</div>
 						<div class="col-xs-12 col-sm-6 col-lg-4 item-journal">
-							<img src="../web/images/img-drop.jpg" width="100%" height="auto" alt="">
+							<img src="web/images/img-drop.jpg" width="100%" height="auto" alt="">
 							<i class="icon icon-drop"></i>
 						</div>
 						<div class="col-xs-12 col-sm-6 col-lg-4 item-journal">
@@ -102,7 +102,7 @@
 							<span class="badge italic">02</span>
 						</div>
 						<div class="col-xs-12 col-sm-6 col-lg-4 item-journal">
-							<img src="../web/images/img-leave.jpg" width="100%" height="auto" alt="">
+							<img src="web/images/img-leave.jpg" width="100%" height="auto" alt="">
 							<i class="icon icon-leave"></i>
 						</div>
 						<div class="col-xs-12 col-sm-6 col-lg-4 item-journal">
@@ -118,6 +118,6 @@
 	</div>
 
 <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
-<script src="../web/js/all.js"></script>
+<script src="web/js/all.js"></script>
 </body>
 </html>
